# anycontent-obsidian-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
douyin-video/scripts/: douyin_downloader.py
web/: app.py  wechat_extractor.py  youtube_extractor.py
