[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anycontent-obsidian-backend"
version = "1.0.0"
description = "Local backend for the AnyContent Vault Importer Obsidian plugin — ASR / OCR / scrape for Douyin, TikTok, WeChat Official Accounts, and YouTube"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Coder4"},
]
maintainers = [
    {name = "Coder4"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia",
]
requires-python = ">=3.10"
dependencies = [
    # Inherited from upstream douyin-mcp-server (Douyin video / image post handling)
    "mcp>=1.0.0",
    "requests",
    "ffmpeg-python",
    "tqdm",
    "dashscope",
    "fastapi",
    "uvicorn",
    "jinja2",
    # Added for WeChat + YouTube extractors
    "beautifulsoup4",
    "lxml",
    "youtube-transcript-api",
]

[project.urls]
Homepage = "https://github.com/vancoder4-cyber/anycontent-obsidian-backend"
Repository = "https://github.com/vancoder4-cyber/anycontent-obsidian-backend"
Issues = "https://github.com/vancoder4-cyber/anycontent-obsidian-backend/issues"
"Obsidian plugin" = "https://github.com/vancoder4-cyber/anycontent-obsidian-importer"
"Upstream (Douyin)" = "https://github.com/yzfly/douyin-mcp-server"

[project.scripts]
anycontent-obsidian-server = "douyin_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["douyin_mcp_server", "web"]
